DATE       AUTHOR   CHANGE
---------- -------- -----------------------------------------------------------
2005-04-21 patrickh Renamed vpr::ThreadPool::barrier() to
                    vpr::ThreadPool::wait() to fix compile errors on Gentoo
                    Linux.
                    NEW VERSION: 0.92.1

[1.0 Beta 2 released - 1.18.2005]==============================================
2005-01-18 patrickh NEW VERSION: 0.92.0
2004-12-28 allenb   Fixed bug in POSIX implementation of CondVar.  There was
                    a bug that allowed out of range values to be passed
                    to the posix wait methods.
                    NEW VERSION: 0.91.1

[1.0 Beta 1 released - 12.24.2004]=============================================
2004-12-22 patrickh NEW VERSION: 0.91.0
2004-12-22 patrickh Use named semaphores for all releases of Darwin 7.x.
                    NEW VERSION: 0.41.1
2004-12-22 allenb   Added simplified interface to the profiling code through
                    the vpr::prof namespace.
                    NEW VERSION: 0.41.0
2004-12-15 allenb   Added simple, working, tested Barrier implementation.
                    NEW VERSION: 0.40.6
2004-12-02 patrickh Updated to allow the use of version 8.1 of the Intel C++
                    compiler.
                    NEW VERSION: 0.40.5
2004-12-01 allenb   Added support for demangling of callstack data with GCC.
2004-11-18 patrickh Changed vpr::Int8 from char to signed char.
                    NEW VERSION: 0.40.2
2004-10-27 allenb   Added support for multi-threaded profile data collection.
                    Profile data is now collected and managed per thread.
2004-10-27 allenb   Refactored BaseThread handling and usage.
                    This cleans up some crufty corners of this code that
                    still has the flavor of polymorphic threads.
2004-10-27 allenb   Refactored API of ProfileNode and ProfileManager.